--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,68 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-background: #fafaf9;
+  --font-sans: var(--font-inter);
+  --tracking-tightest: -0.09em;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  @keyframes navlink-hover {
+    0% {
+      filter: blur(0);
+    }
+    50% {
+      filter: blur(1px);
+    }
+    100% {
+      filter: blur(0px);
+    }
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@keyframes hide {
+  0% {
+    opacity: 1;
+    filter: blur(0);
+  }
+  100% {
+    opacity: 0;
+    filter: blur(4px);
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    filter: blur(4px);
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+::view-transition-old(.crossfade) {
+  animation: hide 0.4s cubic-bezier(0.6, 0, 0.8, 1) forwards;
+}
+
+::view-transition-new(.crossfade) {
+  opacity: 0;
+  animation: appear 0.4s ease 0.2s forwards;
+}
+
+@keyframes shockwave {
+  0% {
+    width: 1px;
+    height: 1px;
+    filter: blur(1px);
+  }
+  100% {
+    width: 180px;
+    height: 180px;
+    filter: blur(40px);
+  }
+}
+
+.shockwave {
+  animation: shockwave 0.8s ease-out forwards;
+  /* animation: shockwave 1s cubic-bezier(0.6, 0, 0.8, 1) infinite; */
 }
